--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ h1 {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 60px;
   font-weight: 700;
-  margin: 20px;
+  margin: 20px
 }
 
 .page-heading {
@@ -157,6 +157,7 @@ table {
 }
 
 #contact-form {
+
   text-align: center;
 }
 
@@ -164,12 +165,11 @@ table {
   text-align: center;
 }
 
-.submit-button,
-.cv-button {
+.submit-button, .cv-button {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #2e5a88;
+  background-color: #2e5a88;;
   color: white;
   text-decoration: none;
   padding: 10px;
@@ -268,7 +268,7 @@ table {
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px) {
+@media all and (min-width: 500px) and (max-width: 750px){
   .grid {
     grid-template-columns: 1fr 1fr;
   }
